[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/pause.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/btn_pause_handler.gd" type="Script" id=3]

[node name="pause_layer" type="CanvasLayer"]

layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
stage_number = 0

[node name="Pause" type="Control" parent="." index="0"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Pause" ]

[node name="black_overlay" type="ColorRect" parent="Pause" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.574588 )

[node name="btn_pause_back" type="Button" parent="Pause" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -40.0
margin_right = 108.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back to game"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="btn_pause_lore" type="Button" parent="Pause" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = 10.0
margin_right = 108.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Lore"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="btn_pause_lore_back" type="Button" parent="Pause" index="3"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = 162.0
margin_right = -163.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="btn_pause_exit" type="Button" parent="Pause" index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = 60.0
margin_right = 108.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit game"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="lore_text" type="RichTextLabel" parent="Pause" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 193.0
margin_top = 53.0
margin_right = 739.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="game_over_label" type="Label" parent="Pause" index="6"]

visible = false
modulate = Color( 0.789063, 0.00616455, 0.00616455, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 261.0
margin_top = 80.0
margin_right = 439.0
margin_bottom = 127.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "You died!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[connection signal="pressed" from="Pause/btn_pause_lore" to="." method="_on_btn_pause_lore_pressed"]

[connection signal="pressed" from="Pause/btn_pause_lore_back" to="." method="_on_btn_pause_lore_back_pressed"]


